externe symbolgrafiken im portalmenu auf awesome umgestellt

--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -828,7 +828,11 @@
 		    @include border-radius(2px);
 		}
 	}
-	
+	a.image {
+	    img {
+	//	box-shadow: none;
+	    }
+	}
 	.logos-menu .logo-item img {
 		@include box-shadow(none);
 	}
