--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -148,17 +148,63 @@
 		margin-bottom: 20px;
 		padding-left: 20px;
 		
-		a.subpage-item {
+		a.image {
 			text-decoration: none;
-
-			h3 {
-				padding: 10px 15px 10px 0;
-				font-weight: bold;
-				text-decoration: none;
+			width: 220px;
+			height: 110px;
+			// @include box-shadow(0 1px 2px rgba(0,0,0,0.3));
+			display: inline-block;			
+			img {
+			    position: relative;
+			    bottom: 0;
+			}
+			
+			&.ext-link:after {
+				@extend .fa;
+				content: "\f08e"; 
+				position: absolute;
+				top: 0;
+				right: 0;
+				z-index: 10;
+				height: 20px;
+				width: 20px;
+				background: $colorPrimary;
+				line-height: 20px;
+				font-size: 13px;
+				color: #fff; 
+				font-weight: bolder;
+				text-align: right;
+				padding: 0 2px 0 0;
+				
 			}
 		}
 	}
-	
+	h3 {
+		    padding: 10px 15px 10px 0;
+		    font-weight: bold;
+		   
+		    a {
+			 text-decoration: none;
+			 &:hover, &:focus {
+			    text-decoration: underline;
+			}
+			
+			&.ext-link:after {
+				@extend .fa;
+				content: "\f08e"; 
+				margin-left: 5px;
+				margin-top: 3px;
+				font-size: 10px;
+				color: $colorText; // $colorDefault;
+				vertical-align: top;
+			    
+			}
+		    }	    
+	}
+
+
+		
+		
 	.menu-item {
 		position: relative;
 	}
@@ -181,11 +227,12 @@
 		    display: table-cell;
 		    vertical-align: middle;
 		    color: $colorDefault;
+		    width: 5px;
 		}
 		
 		a {
 			text-decoration: none;
-			 display: table-cell;
+			display: table-cell;
 			padding: 5px 12px;
 			font-size: 13px;
 			line-height: 16px;
@@ -201,25 +248,9 @@
 		background-color: $colorLightest;
 	}
 	
-	.ext-link h3 {
-		@include inline-block;
-		background: url('../img/ext-icon-19.png') no-repeat 100% 50%;
-		padding-right: 15px;
-		
-		&:hover, &:focus {
-			text-decoration: underline;
-		}
-	}
+
 	
-	.ext-icon {
-		position: absolute;
-		top: 0;
-		right: 0;
-		z-index: 10;
-		height: 20px;
-		width: 20px;
-		background: $colorPrimary url('../img/ext-icon-19-white.png') no-repeat 50% 50%;
-	}
+	
 }
 
 .page-template-page-subnav {
