--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -604,7 +604,7 @@
 	overflow: hidden;
 	
 	@media(max-width: $breakMD) {
-		margin: 10px 15px;
+		margin: 10px 10px;
 		padding: 10px 0;
 	}
 	
@@ -657,6 +657,9 @@ ul.person-info {
 		min-height: 20px;
 		background-repeat: no-repeat;
 		background-position: left center;
+		
+		font-size: 13px;
+		line-height: 20px;
 		
 		li {
 		    list-style: inherit;
