--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -896,7 +896,7 @@
 		@include box-shadow(none);
 	}
 	
-	img.error-404-persons {
+	img.error-siegel {
 		@include box-shadow(none);
 		margin: 0 auto;
 		display: block;
