-  Bildlink Carousel vertikal mittig #142

--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -28,6 +28,7 @@ Main CSS File for Wordpress Theme FAU
 // Import Plugin Stylings
 @import "plugin-flexslider";
 // @import "plugin-fluidbox"; 
+@import "plugin-caroufredsel";
 @import "plugin-fancybox";
 @import "plugin-wpc7";
 @import "plugin-misc";
