--- a/css/sass/_plugin-caroufredsel.scss
+++ b/css/sass/_plugin-caroufredsel.scss
@@ -36,46 +36,67 @@
 	z-index: 10;
 	top: 0;
 	left: -40px;
-	display: block;
 	width: 40px;
 	height: 110px;
-	background: #fff url('../img/prev-next.png') no-repeat -32px center;
-	text-indent: -9999em;
+	text-indent: inherit;
+	
+	i {
+	   font-size: 1.6em; 
+	   width: 100%;
+	   height: 100%;
+	   padding-top: 40px;
+	   text-align: center;
+	}
 }
 
 #logos-menu-next {
 	position: absolute;
 	z-index: 10;
 	top: 0;
-	right: -20px;
+	right: -40px;
 	display: block;
 	width: 30px;
 	height: 110px;
-	background: #fff url('../img/prev-next.png') no-repeat left center;
-	text-indent: -9999em;
+
+	i {
+	   font-size: 1.6em; 
+	   width: 100%;
+	   height: 100%;
+	   padding-top: 40px;
+	   text-align: center;
+	}
+	
 }
+
+.logos-menu-settings {
+    text-align: center;
+}
+
 
 #logos-menu-playpause {
 	@include inline-block;
-	background: url('../img/play-pause.png') no-repeat left -64px;
 	height: 32px;
 	line-height: 32px;
 	padding-left: 32px;
+	font-size: 1.1em; 
+	
+	i {
+	   width: 20px;
+	}
+	
+	.play {
+	    display: none;
+	}
 }
+
+
 
 #logos-menu-playpause.paused {
-	background-position: left -96px;
-}
-
-#logos-menu-playpause .play {
+    .pause {
 	display: none;
-}
-
-#logos-menu-playpause.paused .pause {
-	display: none;
-}
-
-#logos-menu-playpause.paused .play {
+    }	
+    .play {
 	display: inline;
+    }
 }
 
