Links bei Accordions die kein Absatz hatten, wurden falsch dargestellt

--- a/css/sass/_base-atoms.scss
+++ b/css/sass/_base-atoms.scss
@@ -28,7 +28,7 @@ a {
 		color: $colorHover;
 	}
 	
-	p &, li &, table & {
+	p &, li &, table &, .accordion-inner & {
 		text-decoration: underline;
 	}
 	
