--- a/css/sass/_mediaqueries.scss
+++ b/css/sass/_mediaqueries.scss
@@ -927,6 +927,7 @@ Media Queries for Theme FAU-Einrichtungen
 	li {
 	    line-height: 15px;
 	}
+	.span4,
 	.span3 {
 	    width: 48%;
 	    width: calc(50% - 10px);
@@ -934,6 +935,7 @@ Media Queries for Theme FAU-Einrichtungen
 	    margin: 2px;
 
 	}
+	.span5,
 	.span6 {
 	    width: 100%;
 	    margin: 0;
