--- a/css/sass/_mediaqueries.scss
+++ b/css/sass/_mediaqueries.scss
@@ -624,6 +624,7 @@ Media Queries for Theme FAU-Einrichtungen
 		float: left;
 		margin-left: 20px;
 	    }
+	         
 	.span6 {
 		width: #{$breakMD - 10}px;
 		padding: 10px;
@@ -651,6 +652,13 @@ Media Queries for Theme FAU-Einrichtungen
 		    padding: 0;
 		}
 	    }	
+	}
+	.archive .person .span6 {
+	   width: calc(100% - 10px);
+	   
+	   .person-info-description {
+	       padding-top: 15px;
+	   }
 	}
 	
 	
