--- a/css/sass/_responsive-menu.scss
+++ b/css/sass/_responsive-menu.scss
@@ -5,6 +5,21 @@ Responsive Menue for FAU Theme
 #off-canvas, #off-canvas-overlay {
 	display: none;
 }
+
+/* Mobile Navigation Toggle Button */
+#nav-toggle {
+	position: absolute;
+	top: 45px;
+	right: 15px;
+	width: 25px;
+	
+	div {
+		height: 3px;
+		background: $colorMeta;
+		margin-bottom: 3px;
+	}
+}
+
 @media (min-width: $breakMD +1) {
     #nav {
 	overflow: hidden;
@@ -14,11 +29,6 @@ Responsive Menue for FAU Theme
 @media (max-width: $breakMD) {
 
 	body.js-enabled {
-	//	padding-top: 80px;
-
-		&.nav-fixed {
-	//		padding-top: 80px;
-		}
 
 		&.menu-toggled {
 			#off-canvas {
