--- a/css/sass/_plugin-misc.scss
+++ b/css/sass/_plugin-misc.scss
@@ -20,6 +20,7 @@ Anpassungen der Gestaltung an verschiedene Plugins
 	float: right;
 	height: 30px;
 	margin-top: 5px;
+	margin-right: 15px;
 	background: #fff;
 	@include border-radius(20px);
 	background: #fff;
