--- a/css/sass/_plugin-fau_person.scss
+++ b/css/sass/_plugin-fau_person.scss
@@ -293,3 +293,9 @@ span[itemprop="honorificSuffix"] {
 	}
     }
 }
+
+
+.search .search-result .content-person {
+    margin-top: 0;
+    padding-top: 0;
+}
