--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -16,36 +16,18 @@ Main CSS File for Wordpress Theme FAU
 // @import "includes/font-justvector";
 @import "includes/helpers";
 
-// Import Main Stylings
-@import "base-atoms";
-@import "base-organisms";
-@import "base-molecules";
-@import "base-overwrites";
 
-// FAU_Person
-@import "plugin-fau_person";
+// Structure
+@import "structure/structure";
 
-// Flexslider
-@import "plugin-flexslider";
+// Element Styles
+@import "elements/elements";
 
-// Caroufredsel
-@import "plugin-caroufredsel";
+// Plugin-Support
+@import "plugins/plugins";
 
-// Fancyboxes
-@import "plugin-fancybox";
 
-// Contact Form 7
-@import "plugin-wpc7";
-
-// FAU Glossar
-@import "plugin-fau_glossar";
-
-// Everything else, coming from Plugins
-@import "plugin-misc";
 
 // Import Media Queries
 @import "mediaqueries";
-
-// Import Styles for responsive menu
-@import "responsive-menu";
 
