--- a/css/sass/structure/_structure.scss
+++ b/css/sass/structure/_structure.scss
@@ -6,6 +6,9 @@
 // Layout - Rahmen, grundlegende Struktur gesamte Website
 @import "layout";
 
+// Header Region
+@import "header";
+
 // Meta Region
 @import "meta";
 
