--- a/css/sass/structure/_hero.scss
+++ b/css/sass/structure/_hero.scss
@@ -393,3 +393,256 @@
 		width: 100%;
 	}
 }
+
+
+@media (max-width: $breakSM) {
+    #hero {
+	.infobar p.description {
+	    display: none;
+	}
+	.admin-bar & {
+	    .banner-text {
+		top: 0;
+	    }
+	}
+	
+	.no-js & {
+	    display: none;
+	    top: 0;
+	    position: relative;
+	}
+	
+	
+	.searchform {
+	    margin: 0 auto;
+	    padding: 10px;
+	    
+	    input[type="text"] {
+		width: 50%;
+		margin: 0 10px;
+	    }
+	    .filter {
+		margin-top: 5px;
+	    }
+	}
+	
+    
+    }
+
+    #hero-slides {
+	.page-template-page-start & {
+	    top: 0;
+	    height: 150px;
+	    .hero-slide {
+		img {
+		    min-height: 150px;
+		    min-width: $breakMD;
+		    width: auto;
+		    height: auto;
+		    left: inherit;
+		    margin-left: 0;
+		    left: 0;
+		    vertical-align: middle;
+		}
+		p.credits {
+		    top: 2px;
+		    bottom: inherit;
+		    display: inline;
+		}
+	    }
+	    .hero-slide-text {
+		bottom: inherit;
+		top: 20px;
+		margin-left: 15px;
+
+		padding: 0 10px;
+		max-height: 100px;
+		line-height: 18px;
+		h2 {
+		    @include inline-block();
+		     max-width: 250px;
+		     padding: 10px;
+		     font-size: 20px;
+		     background-color: rgba($colorPrimary,0.7);
+
+		}
+		p {
+		    display: none;
+		}
+
+	    }
+	}	
+    }
+}
+
+
+@media (max-width: $breakLG) {
+    #hero {
+	margin-top: 171px; 
+	transition: none;
+	
+	.hero-meta-portal {
+		right: 15px;
+		
+	}
+    }
+ 
+    #hero-slides {
+	top: -20px;
+	height: 250px;
+	.hero-slide {
+	    img {
+		min-height: 250px;
+		min-width: $breakLG;
+		width: auto;
+		height: auto;
+		left: inherit;
+		margin-left: 0;
+		left: 0;
+		vertical-align: middle;
+	    }
+
+	    p {
+		font-size: 16px;
+		
+		.credits {
+		    top: 10px;
+		    bottom: inherit;
+		}
+	    }
+	     
+	}
+	.hero-slide-text {
+	    bottom: inherit;
+	    top: 100px;
+	    height: 150px;
+	}
+
+    }
+}
+
+@media (min-width: $breakLG) {
+	#hero {
+	    margin-top: 159px;
+	    transition: none;
+	}
+	#hero-slides {
+	    top: -20px;
+	}
+}	
+@media (max-width: $breakMD) {
+    .hero-meta-portal {
+		display: none;
+    }
+
+    
+    #hero {
+	margin-top: 0;
+	padding-top: 0px; // 110
+	transition: none;
+
+	&.hero-small {
+	    margin-top: 0;
+	    h1 {
+		    padding: 0 0 0 15px;
+	    }
+	}
+	.admin-bar & {
+	    margin-top: 32px;
+
+	    .banner-text {
+		top: 40px;
+	    }
+
+	}
+	.searchform {
+	    margin: 0 auto;
+	    padding: 10px;
+
+	    input[type="text"] {
+		width: 150px;
+		margin: 0 10px;
+		float: none;
+		display: inline-block;
+	    }
+	    .filter {
+		margin-top: 5px;
+	    }
+	}
+	.no-js & {
+	    margin-top: 0;
+	    transition: none;
+	    padding-top: 10px;
+	    position: relative;
+	    .container {
+		display: table;
+	    }
+	    .span6 {
+		display: table-cell;
+		width: 90%;
+	    }
+	    .span3 {
+		display: table-cell;
+		width: 45%;
+	    }
+	}
+	.no-js.admin-bar & {
+	    margin-top: 171px;
+	}
+    }
+    .hero-meta-portal {
+	    display: none;
+    }
+
+
+    #hero-slides {
+	top: 0;
+	height: 200px;
+	.hero-slide {
+	    img {
+		min-height: 200px;
+		min-width: $breakMD;
+		width: auto;
+		height: auto;
+		left: inherit;
+		margin-left: 0;
+		left: 0;
+		vertical-align: middle;
+	    }
+	    p.credits {
+		top: 2px;
+		bottom: inherit;
+		display: inline;
+	    }
+	}
+	.hero-slide-text {
+	    bottom: inherit;
+	    top: 50px;
+	    margin-left: 15px;
+
+	    padding: 0 10px;
+	    max-height: 100px;
+	    line-height: 18px;
+	    h2 {
+		@include inline-block();
+		 max-width: 330px;
+		 padding: 10px;			 
+	    }
+	    p {
+		display: none;
+	    }
+
+	}
+	.no-js & {
+	    display: none;
+	}
+    }
+
+}
+
+@media (min-width: $breakMD +1) and (min-height: 700px) and (max-height: 900px) {
+	#hero .hero-jumplink-content {
+		display: block;
+	}
+}
+
