--- a/css/sass/elements/_wordpress.scss
+++ b/css/sass/elements/_wordpress.scss
@@ -20,3 +20,9 @@
 	width: auto !important;
 	max-width: auto !important;
 }
+
+@media (max-width: $breakSM) {
+  .wp-caption-text {
+	padding: 0;
+    }
+}
