--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -2092,6 +2092,11 @@ h4 { margin: 0; padding: 11px 0 11px 0; font-size: 15px; line-height: 22px; font
 
 h5 { margin: 0; padding: 11px 0 11px 0; font-size: 15px; line-height: 22px; font-weight: normal; }
 
+@media (max-width: 480px) { .page-template-page-subnav #hero.hero-small h1 { padding-left: 15px; }
+  .page-template-page-subnav #content .container h1, .page-template-page-subnav #content .container h2, .page-template-page-subnav #content .container h3, .page-template-page-subnav #content .container h4, .page-template-page-subnav #content .container h5, .page-template-page-subnav #content .container h6, .page-template-page-subnav #content .container p { margin-left: 0px; margin-right: 0px; }
+  #content .subpages-menu li h3 { padding-bottom: 0px; } }
+@media (max-width: 767px) { h1, h2, h3, h4, h5, h6, p { margin-left: 15px; margin-right: 15px; }
+  #content .container h1, #content .container h2, #content .container h3, #content .container h4, #content .container h5, #content .container h6, #content .container p { margin-left: 0px; margin-right: 0px; } }
 /*-----------------------------------------------------------------------------------*/
 /* Paragraphs
 /*-----------------------------------------------------------------------------------*/
@@ -2214,6 +2219,8 @@ hr::before { content: ""; position: absolute; background: #fff; top: 0; left: 0;
 
 .page-template-page-start hr::after, .home hr::after { top: 30px; -webkit-box-shadow: 0 0 30px #e9edf2; -moz-box-shadow: 0 0 30px #e9edf2; box-shadow: 0 0 30px #e9edf2; }
 
+@media (max-width: 320px) { hr { display: none; } }
+@media (max-width: 767px) { hr { height: 40px; margin: 10px 0 30px; } }
 /*-----------------------------------------------------------------------------------*/
 /* CSS Classes for use in several purposes
 /*-----------------------------------------------------------------------------------*/
@@ -2275,4 +2282,5 @@ img.aligncenter { display: block; margin: 0 auto 10px auto; }
 
 .wp-video { width: auto !important; max-width: auto !important; }
 
+@media (max-width: 480px) { .wp-caption-text { padding: 0; } }
 body { background-color: #fff; }
