--- a/css/sass/structure/_footer.scss
+++ b/css/sass/structure/_footer.scss
@@ -40,3 +40,56 @@
 		background: none;
 	}
 }
+@media (max-width: $breakSM) {
+ #footer {
+	li {
+	    line-height: 15px;
+	}
+	.span4,
+	.span3 {
+	    width: 48%;
+	    width: calc(50% - 10px);
+	    float: left;
+	    margin: 2px;
+
+	}
+	.span5,
+	.span6 {
+	    width: 100%;
+	    margin: 0;
+	    float: none;
+	}
+
+    }
+    #footer-nav {
+
+	text-align: left;
+	li {
+	    display: inline;
+	}
+    }
+}
+@media (max-width: $breakMD) {
+    #footer {
+	    .span3 {
+		width: 48%;
+		width: calc(50% - 10px);
+		float: left;
+		margin: 2px;
+		
+	    }
+	    .span6 {
+		width: 100%;
+		margin: 0;
+		float: none;
+	    }
+	    
+	}
+
+	#footer-nav {	    
+	    text-align: left;
+	    li {
+		display: inline;
+	    }
+	}
+}
